--- a/page_d_acceuil.html
+++ b/page_d_acceuil.html
@@ -26,7 +26,7 @@
 
     <!-- Début de la partie main c'est la partie corps qui contient tous les contenus prinicipaux de la -->
     <main class="principal">
-      <img src="images/image.jpg" alt="la photo de mon profil" #="img" />
+      <img src="images/image.jpg" alt="la photo de mon profil" class="img" />
 
       <div class="principal-texte">
         <div class="texte">
@@ -34,7 +34,7 @@
 
         <h3>A propos de moi</h3>
 
-        <p #="paragraphe">
+        <p class="paragraphe">
           Je suis <strong>Jacques MUTOMB A MUSAS</strong>, je suis développeur
           web et mobile passionné par la création d'interfaces utilisateur
           intuitives et de sites web performants. Je maîtrise parfaitement les
@@ -73,7 +73,7 @@
           <a href="https://x.com/@jacques30966" class="icones"><img src="images/icons8-x-50.png" alt="" class="icone-1" /></a>
         </div>
       </div> 
-      <div #="copy">&copy;2024 By Jacques MUTOMB A MUSAS</div> 
+      <div class="copy">&copy;2024 By Jacques MUTOMB A MUSAS</div> 
     </footer>
   </body>
 </html>
