Modification des selecteurs ID en selecteurs class dans le fichier contact.html

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
       <div class="entete-div">
         <h2 class="entitre-titre">Jacques MUTOMB A MUSAS</h2>
 
-        <!-- Début de la partie  nav contient tout ce qui est liens principaux du site -->
+        <!-- Début de la partie  nav contient tous ce qui sont liens principaux du site -->
         <nav class="entete-nav">
           <a href="CV.html" class="entete-cv liencv" target="_blank">CV</a>
 
@@ -23,6 +23,7 @@
       </div>
     </header>
 
+    <!-- Début de la partie main c'est la partie corps qui contient tous les contenus prinicipaux de la -->
     <main class="container">
       <div class="">
         <h2>Contact</h2>
@@ -61,6 +62,7 @@
       </form>
     </main>
 
+    <!-- Partie enclombant les pieds de page ou bas de page -->
     <footer class="pied">
       <div class="footer">
         <h4>Téléphone</h4>
@@ -82,7 +84,7 @@
         </div>
       </div>
 
-      <div id="copy">&copy;2024 By Jacques MUTOMB A MUSAS</div>
+      <div class="copy">&copy;2024 By Jacques MUTOMB A MUSAS</div>
     </footer>
   </body>
 </html>
