Modification de selecleurs ID en selecteur class dans le fichier contact.html

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       </div>
     </header>
 
-    <!-- Début de la partie main c'est la partie corps qui contient tous les contenus prinicipaux de la -->
+     <!-- Début de la partie main c'est la partie corps qui contient tous les contenus prinicipaux de la -->
     <main class="container">
       <div class="">
         <h2>Contact</h2>
@@ -62,7 +62,7 @@
       </form>
     </main>
 
-    <!-- Partie enclombant les pieds de page ou bas de page -->
+    Partie enclombant les pieds de page ou bas de page
     <footer class="pied">
       <div class="footer">
         <h4>Téléphone</h4>
