Modification de tous les selecteurs ID par de selecteurs class dans le fichier projets.html

--- a/projets.html
+++ b/projets.html
@@ -35,7 +35,7 @@
             sens." Une interface visuelle et utilisateur pensée pour évoquer les
             sens.
           </p>
-          <img src="images/parfum.PNG" alt="" id="imageParfum" />
+          <img src="images/parfum.PNG" alt="" class="imageParfum" />
         </div>
       </div>
 
@@ -48,7 +48,7 @@
             était un agronome americain qui a joué un rôle crucial dans
             l'augmentation de la production agricole mondiale au XXe siècle..
           </p>
-          <img src="projetNorman.PNG" alt="" id="imageParfum" />
+          <img src="projetNorman.PNG" alt="" class="imageParfum" />
         </div>
       </div>
     </main>
@@ -81,7 +81,7 @@
           /></a>
         </div>
       </div>
-      <div id="copy">&copy;2024 By Jacques MUTOMB A MUSAS</div>
+      <div class="copy">&copy;2024 By Jacques MUTOMB A MUSAS</div>
     </footer>
   </body>
 </html>
