Amélioration code du fichier page_d_acceuil.html

--- a/page_d_acceuil.html
+++ b/page_d_acceuil.html
@@ -15,11 +15,11 @@
 
         <!-- Début de la partie  nav contient tout ce qui est liens principaux du site -->
         <nav class="entete-nav">
-          <a href="CV.html" class="entete-cv liencv" target="_blank">CV</a>
+          <a href="CV.html" class="entete-cv entete-cv--hover" target="_blank">CV</a>
 
-          <a href="projets.html" class="entete-projet lienprojet">Projets</a>
+          <a href="projets.html" class="entete-projet entete-projet--hover">Projets</a>
 
-          <a href="contact.html" class="entete-contact liencontact">Contact</a>
+          <a href="contact.html" class="entete-contact entete-contact--hover">Contact</a>
         </nav>
       </div>
     </header>
