--- a/CV.html
+++ b/CV.html
@@ -27,7 +27,7 @@
       <main class="structure">
         <h1 >Curriculum Vitae</h1>
         <div>
-          <div class="titre2">
+          <div>
             <h2>Experience Professionnelle</h2>
     
             <div class="div1">
