Créer class formulair dans le fichier contact.html

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
      <!-- Début de la partie main c'est la partie corps qui contient tous les contenus prinicipaux de la -->
     <main class="container">
-      <div class="">
+      <div class="Contact">
         <h2>Contact</h2>
 
         <div class="">
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <form action="">
+      <form action="" class="formulaire">
         <div class="form1">
           <div class="first-name">
             <label class="form2">Prénom :</label>
@@ -62,7 +62,7 @@
       </form>
     </main>
 
-    Partie enclombant les pieds de page ou bas de page
+    <!-- Partie enclombant les pieds de page ou bas de page -->
     <footer class="pied">
       <div class="footer">
         <h4>Téléphone</h4>
