Commit pour le fichier contact.html

--- a/contact.html
+++ b/contact.html
@@ -25,21 +25,25 @@
 
      <!-- Début de la partie main c'est la partie corps qui contient tous les contenus prinicipaux de la -->
     <main class="container">
+
+       <!-- le bloc contenant le bloc contact et blok email  -->
       <div class="Contact">
         <h2>Contact</h2>
 
-        <div class="">
+        <div class="Contact-telephone">
           <h4>Téléphone</h4>
           <a href="tele:+243827625095">+243827625095</a>
         </div>
 
-        <div class="">
+        <div class="Contact-email">
           <h4>Email</h4>
           <a href="maillo:jacquesamusa77@gmail.com">jacquesamusa77@gmail.com</a>
         </div>
       </div>
 
+      <!-- le bloc contenant le formulaire -->
       <form action="" class="formulaire">
+
         <div class="form1">
           <div class="first-name">
             <label class="form2">Prénom :</label>
@@ -52,12 +56,12 @@
           </div>
         </div>
 
-        <div class="form1">
+        <div class="form2">
           <div class="message">
             <label class="form2">Adresse Email :</label>
-            <textarea name="message" id="msg"></textarea>
+            <textarea name="message" class="msg"></textarea>
           </div>
-          <button type="submit" id="btn">Envoyer</button>
+          <button type="submit" class="btn">Envoyer</button>
         </div>
       </form>
     </main>
