Ajout d'une classe dans la partei p du fichier projets.html

--- a/projets.html
+++ b/projets.html
@@ -46,7 +46,7 @@
       <div class="projet1">
         <div class="ContenuDiv1">
           <h4>Design web parfumé</h4>
-          <p>
+          <p class="projet-para">
             "Une interface visuelle et utilisateur pensée pour évoquer les
             sens." Une interface visuelle et utilisateur pensée pour évoquer les
             sens.
@@ -58,7 +58,7 @@
       <div class="projet1">
         <div class="ContenuDiv1">
           <h4>Dr Norman BORLAUG</h4>
-          <p>
+          <p class="projet-para">
             "Norman Borlaug, souvent appelé le "père de la Révolution verte",
             était un agronome americain qui a joué un rôle crucial dans
             l'augmentation de la production agricole mondiale au XXe siècle..
