Amélioration du fichier contact.html

--- a/contact.html
+++ b/contact.html
@@ -48,34 +48,34 @@
         <h2>Contact</h2>
 
         <div class="Contact-telephone">
-          <h4>Téléphone</h4>
+          <h5>Téléphone</h5>
           <a href="tele:+243827625095">+243827625095</a>
         </div>
 
         <div class="Contact-email">
-          <h4>Email</h4>
+          <h5>Email</h5>
           <a href="maillo:jacquesamusa77@gmail.com">jacquesamusa77@gmail.com</a>
         </div>
       </div>
 
       <!-- le bloc contenant le formulaire -->
       <form action="" class="formulaire">
-
+       
         <div class="form1">
           <div class="first-name">
-            <label class="form2">Prénom :</label>
-            <input type="text" name="first-name" />
+            <label class="form2-form">Prénom :</label>
+            <input type="text" name="first-name"/>
           </div>
 
           <div class="last-name">
-            <label class="form2">Nom :</label>
-            <input type="text" name="last-name" />
+            <label class="form2-form">Nom :</label>
+            <input type="text" name="last-name"/>
           </div>
         </div>
 
         <div class="form2">
           <div class="message">
-            <label class="form2">Adresse Email :</label>
+            <label class="form2-form">Adresse Email :</label>
             <textarea name="message" class="msg"></textarea>
           </div>
           <button type="submit" class="btn">Envoyer</button>
